layout/generic/nsObjectFrame.h
@@ -191,7 +191,7 @@ public:
   virtual LayerState GetLayerState(nsDisplayListBuilder* aBuilder,
                                    LayerManager* aManager);
 
-  ImageContainer* GetImageContainer(LayerManager* aManager = nsnull);
+  already_AddRefed<ImageContainer> GetImageContainer(LayerManager* aManager = nsnull);
   /**
    * Get the rectangle (relative to this frame) which it will paint. Normally
    * the frame's content-box but may be smaller if the plugin is rendering
